Permeable colliders stop particles #26658

Closed
opened 2011-03-29 09:31:59 +02:00 by Lukas Tönne · 8 comments
Member

%%%When using permeability = 1 for colliders, the non-deflected particles will simply stop at the surface.

This is because after the first collision the particle do not have a collision response which pushes them in the other direction. The result is that the same collision point will be detected in the next collision test. If the permeability is high enough (1 or close), all of the max. number of collisions fail and the safety collision response is used, which just stops particles.

There needs to be a way to cancel out a specific collider or face for the current particle state, otherwise the particle will either be deflected (p < 1) or eventually be stopped due to all collisions failing.%%%

%%%When using permeability = 1 for colliders, the non-deflected particles will simply stop at the surface. This is because after the first collision the particle do not have a collision response which pushes them in the other direction. The result is that the same collision point will be detected in the next collision test. If the permeability is high enough (1 or close), *all* of the max. number of collisions fail and the safety collision response is used, which just stops particles. There needs to be a way to cancel out a specific collider or face for the current particle state, otherwise the particle will either be deflected (p < 1) or eventually be stopped due to all collisions failing.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Thanks for the report, I had a feeling I had forgotten something from the collisions rewrite! Fix committed in r35867.%%%

%%%Thanks for the report, I had a feeling I had forgotten something from the collisions rewrite! Fix committed in r35867.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @natescottjones

Added subscriber: @natescottjones

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Nathan reopened this issue 2016-06-27 16:25:57 +02:00

Hi All,
I've been experimenting with particles in Blender 2.77 and this bug seems to still exist, especially for collisions normal to a surface.

Hi All, I've been experimenting with particles in Blender 2.77 and this bug seems to still exist, especially for collisions normal to a surface.

This issue was referenced by 277b1d76ff

This issue was referenced by 277b1d76ff73c3dfb2150ec06af622962c300618

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#26658
No description provided.