Fix for [#26658] Permeable colliders stop particles * Forgot this exception from the collisions rewrite. Don't check collisions with the same face twice.